[gd_scene load_steps=8 format=2]

[ext_resource path="res://staticobjects/Radar.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/radar.png" type="Texture" id=2]
[ext_resource path="res://animation/explosion.tres" type="SpriteFrames" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 8.0

[sub_resource type="CircleShape2D" id=4]
radius = 200.0

[node name="Radar" type="StaticBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="DetectRadius" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRadius"]
shape = SubResource( 4 )

[node name="Explosion" type="AnimatedSprite" parent="."]
visible = false
frames = ExtResource( 3 )

[connection signal="body_entered" from="DetectRadius" to="." method="_on_DetectRadius_body_entered"]
[connection signal="body_exited" from="DetectRadius" to="." method="_on_DetectRadius_body_exited"]
[connection signal="animation_finished" from="Explosion" to="." method="_on_Explosion_animation_finished"]
